# connector

./: .gitattributes  .gitignore  API_SPECS_DRAFT.md  ARCHITECTURE_AND_DATA.md  LOCATION_AND_PRIVACY_TOS.md  PROJECT_OVERVIEW.md  README.md  SECURITY_AND_UGC.md
.github/workflows/: ci.yml
backend/: .env.example  .env.production.template  .gitignore  Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  sample_entities.json  setup.cfg
backend/apps/accounts/: admin.py  apps.py  exceptions.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/chat/: admin.py  apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
backend/apps/locations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/matching/: admin.py  apps.py  models.py  serializers.py  services.py  (+3 more)
backend/connector_backend/: __init__.py  asgi.py  celery.py  health.py  settings.py  urls.py  wsgi.py
backend/logs/: .gitkeep
backend/nginx/: Dockerfile  nginx.conf
backend/tests/: test_api.py  test_chat.py  test_matching.py  test_models.py
frontend/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/linux/: CMakeLists.txt
frontend/test/: validators_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
nginx/: social.otaskflow.com.conf
scripts/: deploy_prod.sh  setup_dev.sh
(+90 files in other folders)
